--- a/css/demo.css
+++ b/css/demo.css
@@ -11,7 +11,7 @@
 }
 
 body {
-	background: #34495e;
+	background: #009dd9;
 }
 
 .container > header,
@@ -28,8 +28,8 @@ body {
 }
 
 .container > header a {
-	color: #566473;
-	text-decoration: none;
+	color: black;
+	text-decoration: darkmagenta;
 	outline: none;
 }
 
@@ -47,7 +47,7 @@ body {
 .container > header span {
 	display: block;
 	font-size: 55%;
-	color: #74818e;
+	color: black;
 	padding: 0 0 0.6em 0.1em;
 }
 
